# lidar_3D_proj

custom_global_path_planner/: CMakeLists.txt  custom_gpb_plugin.xml  package.xml
custom_global_path_planner/src/: CMakeLists.txt  LinearPathPlanner.cpp  LinearPathPlanner.h  custom_gpb_plugin.xml
custom_local_path_planner/: CMakeLists.txt  package.xml
custom_local_path_planner/config/: localPathPlan.yaml
custom_local_path_planner/src/: CMakeLists.txt  PIDTrackingController.cpp  PIDTrackingController.h  PIDTrackingControllerRos.cpp  PIDTrackingControllerRos.h  PurePursuitPlanner copy.cpp  PurePursuitPlanner.cpp  PurePursuitPlanner.h
custom_local_path_planner/src/utils/: PIDController.cpp  PIDController.h  PIDControllerInterface.cpp  PIDControllerInterface.h
doc/: doc.md  doc_work.md  readme.md
mygazebo/launch/: myrobot.launch
mygazebo/worlds/: myrobot.world
robotnik_sensors/launch/: gazebo.launch  view_sensor.launch  view_sensor.urdf.xacro
robotnik_sensors/urdf/: gps.urdf.xacro  hokuyo_ust10lx.urdf.xacro  imu.urdf.xacro  velodyne_vlp16.urdf.xacro
summit_xl_common-melodic/summit_xl_description/robots/: summit_xl_gen_std.urdf.xacro  summit_xl_omni.urdf.xacro  summit_xl_std.urdf.xacro
summit_xl_common-melodic/summit_xl_localization/launch/: map_server.launch
summit_xl_common/summit_xl_control/launch/: summit_xl_control.launch  sxl_control.launch  tv_control.launch
summit_xl_common/summit_xl_description/launch/: summit_xl_robot.launch  summit_xl_rviz.launch
summit_xl_common/summit_xl_description/robots/: summit_xl_std.urdf.xacro  summit_xls_std.urdf.xacro  sxl_std.urdf.xacro  sxl_std_3d.urdf.xacro  sxl_std_stereo.urdf.xacro
summit_xl_common/summit_xl_localization/config/: gmapping_params.yaml  local_ekf_params.yaml  navsat_transform_param.yaml  pose_ekf_params.yaml  slam_gmapping.yaml  sxl_slam_gmapping.yaml  world_ekf_params.yaml
summit_xl_common/summit_xl_localization/config_sxl/: amcl.yaml  gmapping_params.yaml  gps_odom_ekf_params.yaml  gps_world_ekf_params.yaml  pose_ekf_params.yaml  turtebot3_gmapping_params.yaml  tv_lds_2d.lua
summit_xl_common/summit_xl_localization/launch/: data_fusion copy.launch  data_fusion.launch  data_fusion_gps copy.launch  data_fusion_gps.launch  data_fusion_slamgps.launch  map_save.launch  robot_localization_gpsodom.launch  slam_gmapping copy.launch  slam_gmapping.launch  sxl_amcl.launch  sxl_cartorgrapher_2d.launch  sxl_data_fusion.launch  sxl_gmapping.launch  sxl_robot_localization.launch  sxl_slam.launch  vslam_vins.launch
summit_xl_common/summit_xl_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml
summit_xl_common/summit_xl_navigation/config2/: costmap_common_params.yaml  dwa_local_planner_params_burger.yaml  (+4 more)
summit_xl_common/sxl_control/: CMakeLists.txt  package.xml
summit_xl_common/sxl_description/: CMakeLists.txt  package.xml
summit_xl_common/sxl_localization/: CMakeLists.txt  package.xml
summit_xl_common/sxl_localization/config/: local_ekf_params.yaml  slam_gmapping copy.yaml
summit_xl_common/sxl_localization/config_sxl/: ekf_imu_odom_params.yaml  euroc_stereo_imu_config.yaml  gmapping_params copy 2.yaml  gmapping_params copy.yaml  gps_world_ekf_params.yaml  laserfilter_params copy.yaml  laserfilter_params.yaml  left_zed.yaml  navsat_transform_param.yaml
summit_xl_common/sxl_localization/launch/: data_fusion.launch  data_fusion_gps.launch  slam_gmapping.launch  sxl_amcl.launch  sxl_localization_world_gps.launch  sxl_slam_gmapping.launch  test_data_fusion_gps.launch  test_odom.launch
summit_xl_common/sxl_localization/maps/test/: test01.pgm  test01.yaml
summit_xl_common/sxl_navigation/: CMakeLists.txt  package.xml
summit_xl_common/sxl_pad/: CMakeLists.txt  package.xml
summit_xl_common/sxl_perception/: CMakeLists.txt  package.xml
summit_xl_common/sxl_robot_local_control/: CMakeLists.txt  package.xml
summit_xl_common/sxl_slam/: CMakeLists.txt  package.xml
summit_xl_common/sxl_vslam/: CMakeLists.txt  package.xml
summit_xl_sim/map/: tv_test_map.yaml
summit_xl_sim/sxl_gazebo/: CMakeLists.txt  package.xml
summit_xl_sim/sxl_sim/: CMakeLists.txt  package.xml
summit_xl_sim/sxl_sim_bringup/: CMakeLists.txt  package.xml
(+131 files in other folders)
